// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotLayout: > computedAmazonView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          545,
          151,
        ],
        [
          553,
          154,
        ],
        [
          545,
          157,
        ],
      ],
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 17,
        "width": 98,
        "x": 409,
        "y": 132,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            411,
            147,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          360,
          154,
        ],
        [
          419,
          154,
        ],
        [
          485,
          154,
        ],
        [
          545,
          154,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon.s3",
    },
  ],
  "height": 284,
  "id": "amazon",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": null,
      "position": [
        8,
        8,
      ],
      "shape": "rectangle",
      "size": {
        "height": 268,
        "width": 384,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "depth": 1,
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "AMAZON",
          "width": 58,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        522,
        8,
      ],
      "shape": "rectangle",
      "size": {
        "height": 268,
        "width": 384,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            123,
            97,
          ],
          "text": "Backend",
          "width": 78,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": "cloud",
      "position": [
        39,
        64,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "id": "amazon.s3",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            149,
            85,
          ],
          "text": "S3",
          "width": 25,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            91,
            110,
          ],
          "text": "S3 is a storage service",
          "width": 142,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [],
      "parent": "amazon",
      "position": [
        553,
        64,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "S3",
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "amazon",
  "width": 914,
}
`;

exports[`dotLayout: > computedCloud3levels 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          490,
          723,
        ],
        [
          498,
          726,
        ],
        [
          490,
          729,
        ],
      ],
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "parent": "cloud.backend",
      "points": [
        [
          400,
          726,
        ],
        [
          430,
          726,
        ],
        [
          460,
          726,
        ],
        [
          490,
          726,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "headArrow": [
        [
          239,
          627,
        ],
        [
          236,
          635,
        ],
        [
          233,
          627,
        ],
      ],
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labelBBox": {
        "height": 33,
        "width": 196,
        "x": 230,
        "y": 534,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            232,
            549,
          ],
          "text": "fetches data in zero trust network",
          "width": 192,
        },
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            232,
            565,
          ],
          "text": "with sso authentification",
          "width": 139,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          229,
          492,
        ],
        [
          231,
          534,
        ],
        [
          233,
          584,
        ],
        [
          236,
          627,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          370,
          633,
        ],
        [
          361,
          636,
        ],
        [
          366,
          628,
        ],
      ],
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labelBBox": {
        "height": 17,
        "width": 75,
        "x": 485,
        "y": 542,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            487,
            557,
          ],
          "text": "fetches data",
          "width": 71,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          544,
          493,
        ],
        [
          513,
          517,
        ],
        [
          480,
          544,
        ],
        [
          448,
          569,
        ],
        [
          423,
          589,
        ],
        [
          395,
          610,
        ],
        [
          368,
          631,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          227,
          303,
        ],
        [
          224,
          311,
        ],
        [
          222,
          303,
        ],
      ],
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labelBBox": {
        "height": 17,
        "width": 58,
        "x": 222,
        "y": 222,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            224,
            237,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          224,
          180,
        ],
        [
          224,
          219,
        ],
        [
          224,
          264,
        ],
        [
          224,
          303,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "headArrow": [
        [
          654,
          303,
        ],
        [
          651,
          311,
        ],
        [
          649,
          303,
        ],
      ],
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labelBBox": {
        "height": 17,
        "width": 103,
        "x": 649,
        "y": 222,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            651,
            237,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          651,
          180,
        ],
        [
          651,
          219,
        ],
        [
          651,
          264,
        ],
        [
          651,
          303,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "headArrow": [
        [
          664,
          951,
        ],
        [
          661,
          960,
        ],
        [
          659,
          951,
        ],
      ],
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 17,
        "width": 98,
        "x": 659,
        "y": 897,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            661,
            912,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          661,
          821,
        ],
        [
          661,
          862,
        ],
        [
          661,
          910,
        ],
        [
          661,
          951,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "target": "amazon",
    },
  ],
  "height": 1141,
  "id": "cloud3levels",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 2,
      "description": null,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": null,
      "position": [
        8,
        249,
      ],
      "shape": "rectangle",
      "size": {
        "height": 643,
        "width": 886,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "BACKEND",
          "width": 65,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud",
      "position": [
        48,
        577,
      ],
      "shape": "rectangle",
      "size": {
        "height": 275,
        "width": 806,
      },
      "tags": null,
      "technology": null,
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "id": "cloud.backend.graphql",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            107,
            77,
          ],
          "text": "Graphql API",
          "width": 109,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            37,
            102,
          ],
          "text": "Component that allows to query data via",
          "width": 250,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            131,
            119,
          ],
          "text": "GraphQL.",
          "width": 62,
        },
      ],
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "parent": "cloud.backend",
      "position": [
        79,
        636,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Graphql API",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "id": "cloud.backend.storage",
      "inEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            85,
            81,
          ],
          "text": "Backend Storage",
          "width": 154,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            33,
            106,
          ],
          "text": "The backend storage is a component that",
          "width": 258,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            125,
            123,
          ],
          "text": "stores data.",
          "width": 74,
        },
      ],
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud.backend",
      "position": [
        500,
        632,
      ],
      "shape": "storage",
      "size": {
        "height": 188,
        "width": 322,
      },
      "tags": null,
      "technology": null,
      "title": "Backend Storage",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            65,
            76,
          ],
          "text": "Admin Panel Webapp",
          "width": 194,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            35,
            101,
          ],
          "text": "The admin panel is a webapp that allows",
          "width": 253,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            40,
            118,
          ],
          "text": "support staff to manage customer data.",
          "width": 244,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        63,
        313,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Admin Panel Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            33,
            76,
          ],
          "text": "Customer Dashboard Webapp",
          "width": 271,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            38,
            101,
          ],
          "text": "The customer dashboard is a webapp that",
          "width": 262,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            58,
            118,
          ],
          "text": "allows customers to view their data.",
          "width": 221,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        483,
        313,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 335,
      },
      "tags": null,
      "technology": null,
      "title": "Customer Dashboard Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            84,
            77,
          ],
          "text": "Support Engineer",
          "width": 156,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            44,
            102,
          ],
          "text": "Support engineers are responsible for",
          "width": 235,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            95,
            119,
          ],
          "text": "supporting customers",
          "width": 134,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "position": [
        63,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            120,
            97,
          ],
          "text": "customer",
          "width": 83,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "position": [
        490,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud.backend.storage:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            125,
            85,
          ],
          "text": "Amazon",
          "width": 74,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            77,
            110,
          ],
          "text": "Amazon is a cloud provider",
          "width": 169,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        500,
        961,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 902,
}
`;

exports[`dotLayout: > computedCloudView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          640,
          392,
        ],
        [
          648,
          395,
        ],
        [
          640,
          398,
        ],
      ],
      "id": "cloud.frontend:cloud.backend",
      "label": "[...]",
      "labelBBox": {
        "height": 17,
        "width": 24,
        "x": 578,
        "y": 372,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            580,
            387,
          ],
          "text": "[...]",
          "width": 20,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          530,
          395,
        ],
        [
          566,
          395,
        ],
        [
          604,
          395,
        ],
        [
          640,
          395,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "headArrow": [
        [
          305,
          295,
        ],
        [
          308,
          304,
        ],
        [
          301,
          298,
        ],
      ],
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labelBBox": {
        "height": 17,
        "width": 103,
        "x": 258,
        "y": 222,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            260,
            237,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          222,
          180,
        ],
        [
          248,
          217,
        ],
        [
          277,
          259,
        ],
        [
          303,
          297,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          440,
          298,
        ],
        [
          433,
          304,
        ],
        [
          436,
          295,
        ],
      ],
      "id": "support:cloud.frontend",
      "label": "manages",
      "labelBBox": {
        "height": 17,
        "width": 58,
        "x": 481,
        "y": 222,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            483,
            237,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          519,
          180,
        ],
        [
          493,
          217,
        ],
        [
          464,
          259,
        ],
        [
          438,
          297,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          812,
          581,
        ],
        [
          810,
          589,
        ],
        [
          807,
          581,
        ],
      ],
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 17,
        "width": 98,
        "x": 808,
        "y": 526,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            810,
            541,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          810,
          485,
        ],
        [
          810,
          515,
        ],
        [
          810,
          550,
        ],
        [
          810,
          581,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
  ],
  "height": 770,
  "id": "cloudView",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": null,
      "position": [
        179,
        249,
      ],
      "shape": "rectangle",
      "size": {
        "height": 268,
        "width": 822,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            120,
            96,
          ],
          "text": "Frontend",
          "width": 81,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "position": [
        210,
        305,
      ],
      "shape": "browser",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            122,
            96,
          ],
          "text": "Backend",
          "width": 78,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "position": [
        649,
        305,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            119,
            97,
          ],
          "text": "customer",
          "width": 83,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            83,
            77,
          ],
          "text": "Support Engineer",
          "width": 156,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            43,
            102,
          ],
          "text": "Support engineers are responsible for",
          "width": 235,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            94,
            119,
          ],
          "text": "supporting customers",
          "width": 134,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "position": [
        420,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            124,
            85,
          ],
          "text": "Amazon",
          "width": 74,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            76,
            110,
          ],
          "text": "Amazon is a cloud provider",
          "width": 169,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        649,
        590,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 1009,
}
`;

exports[`dotLayout: > computedIndexView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          301,
          277,
        ],
        [
          304,
          285,
        ],
        [
          297,
          280,
        ],
      ],
      "id": "customer:cloud",
      "label": "opens in browser",
      "labelBBox": {
        "height": 17,
        "width": 103,
        "x": 264,
        "y": 222,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            266,
            237,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          226,
          180,
        ],
        [
          249,
          212,
        ],
        [
          275,
          247,
        ],
        [
          299,
          278,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          445,
          280,
        ],
        [
          437,
          285,
        ],
        [
          440,
          277,
        ],
      ],
      "id": "support:cloud",
      "label": "manages",
      "labelBBox": {
        "height": 17,
        "width": 58,
        "x": 474,
        "y": 222,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            476,
            237,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          515,
          180,
        ],
        [
          492,
          212,
        ],
        [
          466,
          247,
        ],
        [
          442,
          278,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          373,
          562,
        ],
        [
          371,
          571,
        ],
        [
          368,
          562,
        ],
      ],
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 17,
        "width": 98,
        "x": 369,
        "y": 508,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            371,
            523,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          371,
          466,
        ],
        [
          371,
          497,
        ],
        [
          371,
          531,
        ],
        [
          371,
          562,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "target": "amazon",
    },
  ],
  "height": 752,
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            119,
            97,
          ],
          "text": "customer",
          "width": 83,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud",
      "inEdges": [
        "support:cloud",
        "customer:cloud",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            137,
            97,
          ],
          "text": "cloud",
          "width": 48,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud:amazon",
      ],
      "parent": null,
      "position": [
        210,
        286,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            83,
            77,
          ],
          "text": "Support Engineer",
          "width": 156,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            43,
            102,
          ],
          "text": "Support engineers are responsible for",
          "width": 235,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            94,
            119,
          ],
          "text": "supporting customers",
          "width": 134,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud",
      ],
      "parent": null,
      "position": [
        420,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            124,
            85,
          ],
          "text": "Amazon",
          "width": 74,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            76,
            109,
          ],
          "text": "Amazon is a cloud provider",
          "width": 169,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        210,
        572,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
  ],
  "tags": null,
  "title": "",
  "width": 741,
}
`;
